IndividualProjects/Semester6-Individual/s6-individual-festivalconnect/k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi-deployment
spec:
  selector:
    matchLabels:
      app: gatewayapi
  template:
    metadata:
      labels:
        app: gatewayapi
    spec:
      containers:
      - name: gatewayapi
        image: lucasjacobs/gatewayapi
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: gatewayapi
spec:
  selector:
    app: gatewayapi
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
