IndividualProjects/Semester6-Individual/s6-individual-festivalconnect/k8s/identity-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityapi
  template:
    metadata:
      labels:
        app: identityapi
    spec:
      containers:
      - name: identityapi
        image: lucasjacobs/identityapi
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: identityapi
spec:
  selector:
    app: identityapi
  ports:
  - port: 8080  
    targetPort: 8080
