IndividualProjects/Semester6-Individual/s6-individual-festivalconnect/k8s/post-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postapi
spec:
  selector:
    matchLabels:
      app: postapi
  template:
    metadata:
      labels:
        app: postapi
    spec:
      containers:
      - name: postapi
        image: lucasjacobs/postapi
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: postapi
spec:
  selector:
    app: postapi
  ports:
  - port: 8080  
    targetPort: 8080
