IndividualProjects/Semester6-Individual/s6-individual-festivalconnect/k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: NodePort
  ports:
    - name: client-port
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: man-port
      port: 15672
      protocol: TCP
      targetPort: 15672
  selector:
    app: rabbitmq
