IndividualProjects/Semester6-Individual/s6-individual-festivalconnect/k8s/user-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-deployment
spec:
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: lucasjacobs/userapi
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: userapi
spec:
  selector:
    app: userapi
  ports:
  - port: 8080  
    targetPort: 8080
